Left-bounded tape model, rewind statement, end-to-end tests
Switch from doubly-infinite tape to Sipser left-bounded model for
doty simulator compatibility. Cell 0 contains > left-end marker,
inserted by a shift-right preamble at TM start.

Add rewind left/right DSL operations for navigating to tape
boundaries. Fix anbn.tmc (was stuck scanning left for blank,
now uses rewind; add structural a*b* check).

Add starts-with-a.tmc example demonstrating rewind. Add
exhaustive oracle-based end-to-end tests for all example
.tmc files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,10 +39,11 @@ add_executable(tmc_tests
     tests/test_codegen.cpp
     tests/test_parser.cpp
     tests/test_simulator.cpp
-    tests/test_triangular.cpp
     tests/test_hlcompiler.cpp
     tests/test_hlcompiler_debug.cpp
+    tests/test_examples.cpp
 )
 target_include_directories(tmc_tests PRIVATE include)
+target_compile_definitions(tmc_tests PRIVATE EXAMPLES_DIR="${CMAKE_SOURCE_DIR}/examples")
 target_link_libraries(tmc_tests PRIVATE tmc_core GTest::gtest_main)
 add_test(NAME TMCTests COMMAND tmc_tests)
